--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>itemic 4.0</title>
-</head>
-<body>
-	someday there will be something here
-	<footer>
-	i didn't know that the footer tag was a thing
-	</footer>
-</body>
-</html>
+---
+layout: default
+title: itemic 4.0
+---
+<div class="blurb">
+	<h1>someday there will be something here</h1>
+</div>
