--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
-layout: default
-title: itemic 4.0
+# You don't need to edit this file, it's empty on purpose.
+# Edit whiteglass' home layout instead if you want to make some changes.
+# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
+layout: home
 ---
-<div class="blurb">
-	<h1>someday there will be something here</h1>
-</div>
