--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@
 # Edit whiteglass' home layout instead if you want to make some changes.
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: home
+title: "Itemic 4.0"
 ---
