--- a/blog.html
+++ b/blog.html
@@ -10,11 +10,11 @@
  <body>
  	<div id="container">
  		<div id="wrap">
- 			<nav class="nav nav-light">
+ 			<nav class="nav">
  				<ul>
- 					<li><a href="#">Home</a></li>
+ 					<li><a href="index.html">Home</a></li>
  					<li><a href="me.html">Me</a></li>
- 					<li><a href="blog.html">Blog</a></li>
+ 					<li><a href="#">Blog</a></li>
  					<li><a href="projects.html">Projects</a></li>
  				</ul>
  			</nav>
