Update CSS and About Me page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
  </head>
  <body>
  	<div id="container">
- 		<div id="wrap">
- 			<nav class="nav nav-light">
+ 		<nav class="nav nav-dark">
  				<ul>
  					<li><a href="#">Home</a></li>
  					<li><a href="me.html">Me</a></li>
@@ -18,35 +17,17 @@
  					<li><a href="projects.html">Projects</a></li>
  				</ul>
  			</nav>
+ 		<div class="wrap">
+ 		 </div>
  			<div class="content">
- 				<div class="text-block">
+ 				<div class="text-block bg-bright" style="vertical-align: middle;">
  					<h1 class="title-header loud">Hello.</h1>
- 					<div class="subtitle-header" >I am <span id="whoami" class="run">Terran</span>.</div>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
+ 					<div class="subtitle-header" ><span id="whoami" class="run">Terran</span></div>
  				</div>
+
  			</div>
- 		</div>
+
+
+ 		
  </body>
  </html>
