--- a/me.html
+++ b/me.html
@@ -7,10 +7,9 @@
 	<link href="static/style.css" rel="stylesheet" />
 	<script src="js/home.js" async></script>
  </head>
- <body>
+<body>
  	<div id="container">
- 		<div id="wrap">
- 			<nav class="nav">
+ 		<nav class="nav nav-dark">
  				<ul>
  					<li><a href="index.html">Home</a></li>
  					<li><a href="#">Me</a></li>
@@ -18,35 +17,28 @@
  					<li><a href="projects.html">Projects</a></li>
  				</ul>
  			</nav>
+ 		<div class="wrap">
+ 		 </div>
  			<div class="content">
- 				<div class="text-block">
- 					<h1 class="title-header loud">Hello.</h1>
- 					<div class="subtitle-header" >I am <span id="whoami" class="run">Terran</span>.</div>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
+ 				<div class="text-block bg-bright" style="vertical-align: middle;">
+ 					<h1 class="title-header">Who am I?</h1>
+ 					<h2 class="subtitle-header">Hi! I'm Terran. I'm a fourth-year Software Engineering student at the University of Auckland. As you might be able to tell, I'm still working on getting this website set up, so there's not much here at the moment.</h2>
+ 					<p>In the meantime, you can find me on <a href="https://www.linkedin.com/in/terrankroft/">LinkedIn</a>, or see some of what I do on <a href="https://github.com/itemic">GitHub</a>. I'll get back to updating this with more information and a more aesthetic design in due time.</p>
+
+ 					<p>Upcoming features:</p>
+ 					<ul>
+ 						<li>More content!</li>
+ 						<li>Actual information about me!</li>
+ 						<li>A CV?</li>
+ 						<li>Interests, education, and more interests</li>
+ 						<li>Projects, blog, blog content</li>
+ 						<li>Links to other personal websites (friends, classmates, etc.) Maybe I'll start some sort of network.
+ 					</ul>
  				</div>
+
  			</div>
- 		</div>
+
+
+ 		
  </body>
  </html>
