--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
  <body>
  	<div id="container">
  		<div id="wrap">
- 			<nav class="nav">
+ 			<nav class="nav nav-dark">
  				<ul>
  					<li><a href="index.html">Home</a></li>
  					<li><a href="me.html">Me</a></li>
