Update about me page.

--- a/blog.html
+++ b/blog.html
@@ -7,10 +7,9 @@
 	<link href="static/style.css" rel="stylesheet" />
 	<script src="js/home.js" async></script>
  </head>
- <body>
+ <body class="bg-dark">
  	<div id="container">
- 		<div id="wrap">
- 			<nav class="nav nav-dark">
+ 		<nav class="nav nav-bright">
  				<ul>
  					<li><a href="index.html">Home</a></li>
  					<li><a href="me.html">Me</a></li>
@@ -18,35 +17,16 @@
  					<li><a href="projects.html">Projects</a></li>
  				</ul>
  			</nav>
+ 		<div class="wrap">
+ 		 </div>
  			<div class="content">
- 				<div class="text-block">
- 					<h1 class="title-header loud">Hello.</h1>
- 					<div class="subtitle-header" >I am <span id="whoami" class="run">Terran</span>.</div>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
+ 				<div class="text-block" style="vertical-align: middle;">
+ 					<h1 class="title-header">Programming. UI design. Signage design. Graphic design. Mathematics. Calculators. Software engineering. Wayfinding. Tea. </h1>
  				</div>
+
  			</div>
- 		</div>
+
+
+ 		
  </body>
  </html>
