--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="static/style.css" rel="stylesheet" />
 	<script src="js/home.js" async></script>
  </head>
- <body>
+ <body class="bg-bright">
  	<div id="container">
  		<nav class="nav nav-dark">
  				<ul>
@@ -20,7 +20,7 @@
  		<div class="wrap">
  		 </div>
  			<div class="content">
- 				<div class="text-block bg-bright" style="vertical-align: middle;">
+ 				<div class="text-block" style="vertical-align: middle;">
  					<h1 class="title-header loud">Hello.</h1>
  					<div class="subtitle-header" ><span id="whoami" class="run">Terran</span></div>
  				</div>
