--- a/me.html
+++ b/me.html
@@ -6,39 +6,55 @@
 	<title>Terran</title>
 	<link href="static/style.css" rel="stylesheet" />
 	<script src="js/home.js" async></script>
- </head>
-<body>
- 	<div id="container">
- 		<nav class="nav nav-dark">
- 				<ul>
- 					<li><a href="index.html">Home</a></li>
- 					<li><a href="#">Me</a></li>
- 					<li><a href="blog.html">Blog</a></li>
- 					<li><a href="projects.html">Projects</a></li>
- 				</ul>
- 			</nav>
- 		<div class="wrap">
- 		 </div>
- 			<div class="content">
- 				<div class="text-block bg-bright" style="vertical-align: middle;">
- 					<h1 class="title-header">Who am I?</h1>
- 					<h2 class="subtitle-header">Hi! I'm Terran. I'm a fourth-year Software Engineering student at the University of Auckland. As you might be able to tell, I'm still working on getting this website set up, so there's not much here at the moment.</h2>
- 					<p>In the meantime, you can find me on <a href="https://www.linkedin.com/in/terrankroft/">LinkedIn</a>, or see some of what I do on <a href="https://github.com/itemic">GitHub</a>. I'll get back to updating this with more information and a more aesthetic design in due time.</p>
+</head>
+<body class="bg-dark">
+	<div id="container">
+		<nav class="nav nav-bright">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="#">Me</a></li>
+				<li><a href="blog.html">Blog</a></li>
+				<li><a href="projects.html">Projects</a></li>
+			</ul>
+		</nav>
+		<div class="wrap">
+		</div>
+		<div class="content">
+			<div class="text-block" style="vertical-align: middle; text-align: center">
 
- 					<p>Upcoming features:</p>
- 					<ul>
- 						<li>More content!</li>
- 						<li>Actual information about me!</li>
- 						<li>A CV?</li>
- 						<li>Interests, education, and more interests</li>
- 						<li>Projects, blog, blog content</li>
- 						<li>Links to other personal websites (friends, classmates, etc.) Maybe I'll start some sort of network.
- 					</ul>
- 				</div>
+				<h2 class="title-header">Terran Kroft</h2>
+				<p style="font-weight: 300; font-style: italic;">Content on this page is still experimental; I'm still figuring out the best way to present all this stuff.</p>
+				<p class="link"><a href="https://www.linkedin.com/in/terrankroft/">LinkedIn</a> | <a href="https://github.com/itemic">GitHub</a> | <a href="https://www.twitter.com/itemic">Twitter</a></p>
 
- 			</div>
+			</div>
+
+			<div class="text-block" style="vertical-align: middle">
+
+				<h2 class="title-subheader">Interests</h2>
+				<p class="vibrant">UI design.<span class="subdue-dark"> I haven't had any formal training in design, but I do like to make sure that my projects look aesthetic.</span></p>
+				<p class="vibrant">Typography.<span class="subdue-dark"> See above.</span></p>
+				<p class="vibrant">Video games.<span class="subdue-dark"> I play the usual: League of Legends and Hearthstone, and I'm not that great at either of them. My favorite PC game is XCOM 2.</span></p>
+				</div>
+
+				<div class="text-block" style="vertical-align: middle">
+
+				<h2 class="title-subheader">Devices</h2>
+				<p class="vibrant">MacBook Pro (13-inch, Early 2015).<span class="subdue-dark"> I use this laptop every day, from working on projects to playing games.</span></p>
+				<p class="vibrant">Surface Pro 3.<span class="subdue-dark"> I had this before I upgraded to the MacBook Pro. Now, it's used as a wireless access point.</span></p>
+				<p class="vibrant">iPad Pro (10.5).<span class="subdue-dark"> My Hearthstone console, PDF reader, and university companion.</span></p>
+				</div>
+
+			<div class="text-block" style="vertical-align: middle">
+
+				<h2 class="title-subheader">Education</h2>
+				<p class="vibrant">I'm a 4th year student studying Software Engineering at the University of Auckland.<span class="subdue-dark"> If everything goes well, I'll be done with this degree by the end of 2018. In both 2016 and 2017, I was on the Dean's Honours List.</span></p>
+				<p class="vibrant">I'm the Part 4 Representative of SESA.<span class="subdue-dark"> SESA is the University of Auckland's <a href="www.sesa.nz">Software Engineering Students Association</a>. We organize and host events for SE students, such as board game nights and careers evenings (Industry Night), as well as act as a liaison between the students and the SE department.</span></p>
+			</div>
+
+			</div>
+			
 
 
- 		
- </body>
- </html>
+
+		</body>
+		</html>
