Fix link to SESA

--- a/me.html
+++ b/me.html
@@ -48,7 +48,7 @@
 
 				<h2 class="title-subheader">Education</h2>
 				<p class="vibrant">I'm a 4th year student studying Software Engineering at the University of Auckland.<span class="subdue-dark"> If everything goes well, I'll be done with this degree by the end of 2018. In both 2016 and 2017, I was on the Dean's Honours List.</span></p>
-				<p class="vibrant">I'm the Part 4 Representative of SESA.<span class="subdue-dark"> SESA is the University of Auckland's <a href="www.sesa.nz">Software Engineering Students Association</a>. We organize and host events for SE students, such as board game nights and careers evenings (Industry Night), as well as act as a liaison between the students and the SE department.</span></p>
+				<p class="vibrant">I'm the Part 4 Representative of SESA.<span class="subdue-dark"> SESA is the University of Auckland's <a href="https://www.sesa.nz">Software Engineering Students Association</a>. We organize and host events for SE students, such as board game nights and careers evenings (Industry Night), as well as act as a liaison between the students and the SE department.</span></p>
 			</div>
 
 			</div>
