--- a/projects.html
+++ b/projects.html
@@ -5,48 +5,50 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Terran</title>
 	<link href="static/style.css" rel="stylesheet" />
+	<link href="static/projects.css" rel="stylesheet" />
 	<script src="js/home.js" async></script>
- </head>
- <body>
- 	<div id="container">
- 		<div id="wrap">
- 			<nav class="nav">
- 				<ul>
- 					<li><a href="index.html">Home</a></li>
- 					<li><a href="me.html">Me</a></li>
- 					<li><a href="blog.html">Blog</a></li>
- 					<li><a href="#">Projects</a></li>
- 				</ul>
- 			</nav>
- 			<div class="content">
- 				<div class="text-block">
- 					<h1 class="title-header loud">Hello.</h1>
- 					<div class="subtitle-header" >I am <span id="whoami" class="run">Terran</span>.</div>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 					<p>Ignore the fact that this website looks like a rip-off of the Apple official website. That'll change soon.</p>
- 				</div>
- 			</div>
- 		</div>
- </body>
- </html>
+
+</head>
+<body class="bg-dark">
+	<div id="container">
+		<nav class="nav nav-bright">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="me.html">Me</a></li>
+				<li><a href="blog.html">Blog</a></li>
+				<li><a href="#">Projects</a></li>
+			</ul>
+		</nav>
+		<div class="wrap">
+		</div>
+		<div class="content">
+			<div class="text-block" style="vertical-align: middle; text-align: center">
+
+				<h2 class="title-header color-title">Projects</h2>
+				<p style="font-weight: 200; font-style: italic; letter-spacing: 0.05em">Over the years I've worked on some projects, in and out of school. Here's some of them.</p>
+
+			</div>
+
+			<div class="card-container">
+
+				<div class="card" id="grid">
+					Bepis
+				</div>
+				<div class="card">
+					Bepis
+				</div>
+				<div class="card">
+					Bepis
+				</div>
+				<div class="card">
+					Bepis
+				</div>
+
+
+			</div>
+
+
+		</div>
+
+	</body>
+	</html>
