Add projects page with actual template for projects

--- a/projects.html
+++ b/projects.html
@@ -29,26 +29,29 @@
 
 			</div>
 
-			<div class="card-container">
+			<div class="text-block bg-bright" style="vertical-align: middle; text-align: center">
 
-				<div class="card" id="grid">
-					Bepis
-				</div>
-				<div class="card">
-					Bepis
-				</div>
-				<div class="card">
-					Bepis
-				</div>
-				<div class="card">
-					Bepis
-				</div>
+				<h2 class="title-header">Revilo Task Scheduler</h2>
+				<p style="font-weight: 200; font-style: italic; letter-spacing: 0.05em">Task scheduler for SOFTENG 306.</p>
+			</div>
 
+			
+
+			<div class="text-block bg-bright" style="vertical-align: middle; text-align: center">
+
+				<h2 class="title-header">VOXSpell</h2>
+				<p style="font-weight: 200; font-style: italic; letter-spacing: 0.05em">Spelling aid application for SOFTENG 206.</p>
+
+			</div>
+			<div class="text-block bg-bright" style="vertical-align: middle; text-align: center">
+
+				<h2 class="title-header">Bad Manor</h2>
+				<p style="font-weight: 200; font-style: italic; letter-spacing: 0.05em">Critical thinking-based game for SOFTENG 306.</p>
 
 			</div>
 
 
-		</div>
 
+		</div>
 	</body>
 	</html>
