New under construction page

--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,9 @@
  		 </div>
  			<div class="content">
  				<div class="text-block" style="vertical-align: middle;">
- 					<h1 class="title-header">Programming. UI design. Signage design. Graphic design. Mathematics. Calculators. Software engineering. Wayfinding. Tea. </h1>
+ 					<h1 class="loud">🚧</h1>
+ 					<h1 class="title-header">This page is currently unsuitable for all users whilst further construction is carried out.</h1>
+ 					
  				</div>
 
  			</div>
