Begin simplification to single page

--- a/index.html
+++ b/index.html
@@ -6,28 +6,18 @@
 	<title>Terran</title>
 	<link href="static/style.css" rel="stylesheet" />
 	<script src="js/home.js" async></script>
- </head>
- <body class="bg-bright">
- 	<div id="container">
- 		<nav class="nav nav-dark">
- 				<ul>
- 					<li><a href="#">Home</a></li>
- 					<li><a href="me.html">Me</a></li>
- 					<li><a href="blog.html">Blog</a></li>
- 					<li><a href="projects.html">Projects</a></li>
- 				</ul>
- 			</nav>
- 		<div class="wrap">
- 		 </div>
- 			<div class="content">
- 				<div class="text-block" style="vertical-align: middle;">
- 					<h1 class="title-header loud">Hello.</h1>
- 					<div class="subtitle-header" ><span id="whoami" class="run">Terran</span></div>
- 				</div>
-
- 			</div>
+</head>
+<body class="bg-bright">
+	<div id="container">
+		<div class="main-content">
+			<h1>Hi, I'm Terran.</h1>
+			<!-- <div class="subtitle-header">Fourth year software engineering student, University of Auckland</div> -->
+			<h2 id="whoami" class="run">And you've found my website!</h2>
+			<h3>University of Auckland.</h3>
+		</div>
 
 
- 		
- </body>
- </html>
+
+
+	</body>
+	</html>
