New minimalist single-page layout

--- a/index.html
+++ b/index.html
@@ -7,13 +7,27 @@
 	<link href="static/style.css" rel="stylesheet" />
 	<script src="js/home.js" async></script>
 </head>
-<body class="bg-bright">
+<body>
 	<div id="container">
-		<div class="main-content">
+		<div class="main-content bg-bright">
 			<h1>Hi, I'm Terran.</h1>
 			<!-- <div class="subtitle-header">Fourth year software engineering student, University of Auckland</div> -->
 			<h2 id="whoami" class="run">And you've found my website!</h2>
-			<h3>University of Auckland.</h3>
+			<p class="link"><a href="https://www.linkedin.com/in/terrankroft/">LinkedIn</a> | <a href="https://github.com/itemic">GitHub</a> | <a href="https://www.twitter.com/itemic">Twitter</a></p>
+
+		</div>
+		<div class="content bg-light">
+			<h2>Education</h2>
+			<h4>University of Auckland (2015-)</h4>
+			<p><span class="vibrant">I'm currently a 4th year software engineering student.</span> By the end of the year, I'll be done with my degree. In both 2016 and 2017, I was on the Dean's Honours List.</p>
+			<p><span class="vibrant">I'm also the Part 4 Representative of SESA.</span> SESA is the University of Auckland's <a href="https://www.sesa.co.nz">Software Engineering Students Association</a>. We organize and host events for SE students, such as board game nights, career evenings (Industry Night), as well as grad series talks.</p>
+
+			<h2>Experience</h2>
+			<p>To be added... very soon...</p>
+		</div>
+		<div class="content bg-dark">
+			<h2>Projects</h2>
+			<p>There'll be content here shortly.</p>
 		</div>
 
 
