Add work experience

--- a/index.html
+++ b/index.html
@@ -20,14 +20,19 @@
 			<h2>Education</h2>
 			<h4>University of Auckland (2015-)</h4>
 			<p><span class="vibrant">I'm currently a 4th year software engineering student.</span> By the end of the year, I'll be done with my degree. In both 2016 and 2017, I was on the Dean's Honours List.</p>
-			<p><span class="vibrant">I'm also the Part 4 Representative of SESA.</span> SESA is the University of Auckland's <a href="https://www.sesa.co.nz">Software Engineering Students Association</a>. We organize and host events for SE students, such as board game nights, career evenings (Industry Night), as well as grad series talks.</p>
+			<p><span class="vibrant">I'm the Part 4 Representative of SESA.</span> SESA is the University of Auckland's <a href="https://www.sesa.co.nz">Software Engineering Students Association</a>. We organize and host events for SE students, such as board game nights, career evenings (Industry Night), as well as grad series talks.</p>
+			<p><span class="vibrant">I'm also the Part 4 Software Engineering Rep.</span> The <a href="http://www.ece.auckland.ac.nz/en/about/our-department/sscc.html">Staff-Student Consultative Committee</a> is a way for students to raise issues within the Department. We also hold department-wide events from time to time.</p>
 
 			<h2>Experience</h2>
-			<p>To be added... very soon...</p>
+			<h4>Software Engineering Intern, <a href="https://orionhealth.com" style="color: #EA3F1E">Orion Health</a> (Nov 2017-Feb 2018)</h4>
+			<p><span class="vibrant">Over my summer I worked in the Big Data as a Service team.</span> I designed a dashboard used to view Ansible job templates and inventories with the Ansible Tower API and Vue.js. I also investigated integrating SSO authentication for an internal-use API for the BDaaS team, using API Gateway and the Serverless framework.</p>
+
+			<h4>Intern, <a href="http://www.kas.tw" style="color: #DE1417">Kaohsiung American School</a> (Nov 2016-Feb 2017)</h4>
+			<p><span class="vibrant">I redesigned the digital signage system used around campus.</span> The system I designed is now on all the displays around campus, and allows greater flexibility in what can be displayed. The code for it has been made public and can be found <a href="http://github.com/itemic/status-kas">here</a>.</p>
 		</div>
 		<div class="content bg-dark">
 			<h2>Projects</h2>
-			<p>There'll be content here shortly.</p>
+			<p>Most of my projects are part of university coursework, but recently I have started on a few of my own personal projects. I hope to showcase those as soon as I manage to make them at least somewhat presentable.</p>
 		</div>
 
 
