Add projects preliminary

--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 </head>
 <body>
 	<div id="container">
+		<div class="construction bg-dark">
+			<h2>🚧 Still under construction, but feel free to look around. 🚧</h2><span class="vibrant">Updated May 7, 2018.</span>
+		</div>
 		<div class="main-content bg-bright">
 			<h1>Hi, I'm Terran.</h1>
 			<!-- <div class="subtitle-header">Fourth year software engineering student, University of Auckland</div> -->
 			<h2 id="whoami" class="run">And you've found my website!</h2>
-			<p class="link"><a href="https://www.linkedin.com/in/terrankroft/">LinkedIn</a> | <a href="https://github.com/itemic">GitHub</a> | <a href="https://www.twitter.com/itemic">Twitter</a></p>
+			<p class="link"><a style="color: #0061A2" href="https://www.linkedin.com/in/terrankroft/">LinkedIn</a> | <a style="color: #767676 "href="https://github.com/itemic">GitHub</a> | <a style="color: #178DEF" href="https://www.twitter.com/itemic">Twitter</a></p>
 
 		</div>
+
 		<div class="content bg-light">
 			<h2>Education</h2>
 			<h4>University of Auckland (2015-)</h4>
@@ -30,9 +34,24 @@
 			<h4>Intern, <a href="http://www.kas.tw" style="color: #DE1417">Kaohsiung American School</a> (Nov 2016-Feb 2017)</h4>
 			<p><span class="vibrant">I redesigned the digital signage system used around campus.</span> The system I designed is now on all the displays around campus, and allows greater flexibility in what can be displayed. The code for it has been made public and can be found <a href="http://github.com/itemic/status-kas">here</a>.</p>
 		</div>
-		<div class="content bg-dark">
+		<div class="content bg-green">
 			<h2>Projects</h2>
-			<p>Most of my projects are part of university coursework, but recently I have started on a few of my own personal projects. I hope to showcase those as soon as I manage to make them at least somewhat presentable.</p>
+			<p>Here's a small selection of some projects I worked on in the past. Someday (when?) I'll make a separate page for this with links to repositories, but otherwise they're mostly up on <a style="color: #767676 "href="https://github.com/itemic">GitHub</a>.</p>
+
+			<h4>Course Notes (∞)</h4><i>Technologies used: LaTeX</i>
+			<p><span class="vibrant">I study by making study guides.</span> Usually I don't read them after I make them, so why not share them with others so that others can (hopefully) benefit from them? <a href="https://github.com/itemic/notes-cs702" style="color: #20222B">COMPSCI 702</a></p>
+
+			<h4>Rotacsufbo (2018)</h4><i>Technologies used: Java, JavaParser</i>
+			<p><span class="vibrant">Java obfuscation tool.</span> Performs several different ways to obfuscate Java code, for COMPSCI 702. While the challenge phase is still active, I won't say anything more about it.</p>
+
+			<h4>Bad Manor (2017)</h4><i>Technologies used: C#, Unity</i>
+			<p><span class="vibrant">A critical-thinking adventure mystery developed in Unity in a (fantastic) group of 8.</span> This project was part of the "game development" half of SOFTENG 306. </p>
+
+			<h4>Revilo Task Scheduler (2017)</h4><i>Technologies used: Java, JavaFX, ParaTask</i>
+			<p><span class="vibrant">Java task scheduling app with an outstanding GUI.</span> Revilo produces an optimal schedule given a directed acyclic graph of tasks. This was done in a(n outstanding) team of 5 for the first half of SOFTENG 306. </p>
+
+			<h4>VOXSpell (2016)</h4><i>Technologies used: Java, JavaFX</i>
+			<p><span class="vibrant">Spelling practice application designed in Java with the Festival TTS library.</span> This project is the main deliverable for SOFTENG 206, and was runner-up in the VOXSpell class competition out of 8 finalists. </p>
 		</div>
 
 
