--- a/wsc.html
+++ b/wsc.html
@@ -30,7 +30,7 @@
 
 				<p style="font-weight: 200; font-style: italic; letter-spacing: 0.05em">The next theme for the World Scholar's Cup* is...</p>
 
-				<h2 class="title-header color-title" id="wsctheme">Theme</h2>
+				<h1 class="title-header" id="wsctheme">Theme</h1>
 			</div>
 			
 			<div class="wsc-footer">
