--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<!-- <div class="subtitle-header">Fourth year software engineering student, University of Auckland</div> -->
 			<h2 id="whoami" class="run">And you've found my website!</h2>
 			<p class="link"><a style="color: #0061A2" href="https://www.linkedin.com/in/terrankroft/">LinkedIn</a> | <a style="color: #767676 "href="https://github.com/itemic">GitHub</a> | <a style="color: #178DEF" href="https://www.twitter.com/itemic">Twitter</a> | <a class="ig" href="https://www.instagram.com/ekisigns">Instagram</a></p>
-			<p class="link"></p>
+			<p class="link"><a href="projects.html">Projects</a></p>
 
 		</div>
 
@@ -29,7 +29,7 @@
 			<p><span class="vibrant">I was also the Part 4 Software Engineering Rep.</span> The <a href="http://www.ece.auckland.ac.nz/en/about/our-department/sscc.html">Staff-Student Consultative Committee</a> is a way for students to raise issues within the Department. We also hold department-wide events from time to time.</p>
 
 			<h2>Experience</h2>
-			<h4><a href="https://auckland.ac.nz" style="color: #610C10">World Scholar's Cup</a> (Nov 2018-)</h4>
+			<h4><a href="https://scholarscup.org" style="color: #610C10">World Scholar's Cup</a> (Nov 2018-)</h4>
 			<p><span class="vibrant"></span></p>
 
 			<h4>Marker, <a href="https://auckland.ac.nz" style="color: #07477D">University of Auckland</a> (Mar 2018-Nov 2018)</h4>
@@ -41,28 +41,6 @@
 			<h4>Intern, <a href="http://www.kas.tw" style="color: #DE1417">Kaohsiung American School</a> (Nov 2016-Feb 2017)</h4>
 			<p><span class="vibrant">I redesigned the digital signage system used around campus.</span> The system I designed is now on all the displays around campus, and allows greater flexibility in what can be displayed. The code for it has been made public and can be found <a href="http://github.com/itemic/status-kas">here</a>.</p>
 		</div>
-		<div class="content bg-green">
-			<h2>Projects</h2>
-			<p>Here's a small selection of some projects I worked on in the past. Someday (when?) I'll make a separate page for this with links to repositories, but otherwise they're mostly up on <a style="color: #767676 "href="https://github.com/itemic">GitHub</a>.</p>
-
-			<h4>Course Notes (∞)</h4><i>Technologies used: LaTeX</i>
-			<p><span class="vibrant">I study by making study guides.</span> Usually I don't read them after I make them, so why not share them with others so that others can (hopefully) benefit from them? <a href="https://github.com/itemic/notes-cs702" style="color: #20222B">COMPSCI 702</a></p>
-
-			<h4>Rotacsufbo (2018)</h4><i>Technologies used: Java, JavaParser</i>
-			<p><span class="vibrant">Java obfuscation tool.</span> Performs several different ways to obfuscate Java code, for COMPSCI 702. While the challenge phase is still active, I won't say anything more about it.</p>
-
-			<h4>Bad Manor (2017)</h4><i>Technologies used: C#, Unity</i>
-			<p><span class="vibrant">A critical-thinking adventure mystery developed in Unity in a (fantastic) group of 8.</span> This project was part of the "game development" half of SOFTENG 306. </p>
-
-			<h4>Revilo Task Scheduler (2017)</h4><i>Technologies used: Java, JavaFX, ParaTask</i>
-			<p><span class="vibrant">Java task scheduling app with an outstanding GUI.</span> Revilo produces an optimal schedule given a directed acyclic graph of tasks. This was done in a(n outstanding) team of 5 for the first half of SOFTENG 306. </p>
-
-			<h4>VOXSpell (2016)</h4><i>Technologies used: Java, JavaFX</i>
-			<p><span class="vibrant">Spelling practice application designed in Java with the Festival TTS library.</span> This project is the main deliverable for SOFTENG 206, and was runner-up in the VOXSpell class competition out of 8 finalists. </p>
-		</div>
-
-
-
 
 	</body>
 	</html>
