--- a/projects.html
+++ b/projects.html
@@ -5,53 +5,37 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Terran</title>
 	<link href="static/style.css" rel="stylesheet" />
-	<link href="static/projects.css" rel="stylesheet" />
 	<script src="js/home.js" async></script>
-
 </head>
-<body class="bg-dark">
+<body>
 	<div id="container">
-		<nav class="nav nav-bright">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="me.html">Me</a></li>
-				<li><a href="blog.html">Blog</a></li>
-				<li><a href="#">Projects</a></li>
-			</ul>
-		</nav>
-		<div class="wrap">
-		</div>
-		<div class="content">
-			<div class="text-block" style="vertical-align: middle; text-align: center">
-
-				<h2 class="title-header color-title">Projects</h2>
-				<p style="font-weight: 200; font-style: italic; letter-spacing: 0.05em">Over the years I've worked on some projects, in and out of school. Here's some of them.</p>
-
-			</div>
-
-			<div class="text-block bg-bright" style="vertical-align: middle; text-align: center">
-
-				<h2 class="title-header">Revilo Task Scheduler</h2>
-				<p style="font-weight: 200; font-style: italic; letter-spacing: 0.05em">Task scheduler for SOFTENG 306.</p>
-			</div>
-
-			
-
-			<div class="text-block bg-bright" style="vertical-align: middle; text-align: center">
-
-				<h2 class="title-header">VOXSpell</h2>
-				<p style="font-weight: 200; font-style: italic; letter-spacing: 0.05em">Spelling aid application for SOFTENG 206.</p>
-
-			</div>
-			<div class="text-block bg-bright" style="vertical-align: middle; text-align: center">
-
-				<h2 class="title-header">Bad Manor</h2>
-				<p style="font-weight: 200; font-style: italic; letter-spacing: 0.05em">Critical thinking-based game for SOFTENG 306.</p>
-
-			</div>
-
+		
+		<div class="main-content bg-bright">
+			<h1>Projects</h1><br>
+			<h2>Here's a small selection of some projects I worked on in the past.</h2>
 
 
 		</div>
+
+		<div class="content bg-green">
+			<h4>Course Notes (∞)</h4><i>Technologies used: LaTeX</i>
+			<p><span class="vibrant">I study by making study guides.</span> Usually I don't read them after I make them, so why not share them with others so that others can (hopefully) benefit from them? <a href="https://github.com/itemic/notes-cs702" style="color: #20222B">COMPSCI 702</a></p>
+
+			<h4>Rotacsufbo (2018)</h4><i>Technologies used: Java, JavaParser</i>
+			<p><span class="vibrant">Java obfuscation tool.</span> Performs several different ways to obfuscate Java code, for COMPSCI 702. While the challenge phase is still active, I won't say anything more about it.</p>
+
+			<h4>Bad Manor (2017)</h4><i>Technologies used: C#, Unity</i>
+			<p><span class="vibrant">A critical-thinking adventure mystery developed in Unity in a (fantastic) group of 8.</span> This project was part of the "game development" half of SOFTENG 306. </p>
+
+			<h4>Revilo Task Scheduler (2017)</h4><i>Technologies used: Java, JavaFX, ParaTask</i>
+			<p><span class="vibrant">Java task scheduling app with an outstanding GUI.</span> Revilo produces an optimal schedule given a directed acyclic graph of tasks. This was done in a(n outstanding) team of 5 for the first half of SOFTENG 306. </p>
+
+			<h4>VOXSpell (2016)</h4><i>Technologies used: Java, JavaFX</i>
+			<p><span class="vibrant">Spelling practice application designed in Java with the Festival TTS library.</span> This project is the main deliverable for SOFTENG 206, and was runner-up in the VOXSpell class competition out of 8 finalists. </p>
+		</div>
+
+
+
+
 	</body>
 	</html>
