Add projects page

--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 </head>
 <body>
 	<div id="container">
-		<div class="construction bg-dark">
-			<span class="vibrant">🚧 Still under construction, but feel free to look around. Last updated Jan 17, 2019. 🚧</span>
-		</div>
+		
 		<div class="main-content bg-bright">
+
 			<h1>Hi, I'm Terran.</h1>
 			<!-- <div class="subtitle-header">Fourth year software engineering student, University of Auckland</div> -->
 			<h2 id="whoami" class="run">And you've found my website!</h2>
 			<p class="link"><a style="color: #0061A2" href="https://www.linkedin.com/in/terrankroft/">LinkedIn</a> | <a style="color: #767676 "href="https://github.com/itemic">GitHub</a> | <a style="color: #178DEF" href="https://www.twitter.com/itemic">Twitter</a> | <a class="ig" href="https://www.instagram.com/ekisigns">Instagram</a></p>
-			<p class="link"><a href="projects.html">Projects</a></p>
+			
+			<p class="link"><a style="color: #00aba5" href="projects.html">My Projects</a></p>
+
+			<div class="construction bg-dark">
+			<span class="vibrant">🚧 Still under construction, but feel free to look around. Last updated Jan 17, 2019. 🚧</span>
+		</div>
 
 		</div>
 
@@ -25,8 +29,8 @@
 			<h2>Education</h2>
 			<h4>University of Auckland (2015-2018)</h4>
 			<p><span class="vibrant">I just finished my Bachelor of Engineering (Honours) degree in Software Engineering.</span> I will graduate in May 2019 (I believe with First Class Honours). In both 2016 and 2017, I was on the Dean's Honours List.</p>
-			<p><span class="vibrant">I was the Part 4 Representative of SESA in 2018.</span> SESA is the University of Auckland's <a href="https://www.sesa.co.nz">Software Engineering Students Association</a>. We organize and host events for SE students, such as board game nights, career evenings (Industry Night), as well as grad series talks. In 2017, I was also a general exec member.</p>
-			<p><span class="vibrant">I was also the Part 4 Software Engineering Rep.</span> The <a href="http://www.ece.auckland.ac.nz/en/about/our-department/sscc.html">Staff-Student Consultative Committee</a> is a way for students to raise issues within the Department. We also hold department-wide events from time to time.</p>
+			<p><span class="vibrant">I was the Part 4 Representative of SESA in 2018.</span> SESA is the University of Auckland's <a class="bg" href="https://www.sesa.co.nz">Software Engineering Students Association</a>. We organize and host events for SE students, such as board game nights, career evenings (Industry Night), as well as grad series talks. In 2017, I was also a general exec member.</p>
+			<p><span class="vibrant">I was also the Part 4 Software Engineering Rep.</span> The <a class="bg" href="http://www.ece.auckland.ac.nz/en/about/our-department/sscc.html">Staff-Student Consultative Committee</a> is a way for students to raise issues within the Department. We also hold department-wide events from time to time.</p>
 
 			<h2>Experience</h2>
 			<h4><a href="https://scholarscup.org" style="color: #610C10">World Scholar's Cup</a> (Nov 2018-)</h4>
@@ -39,7 +43,7 @@
 			<p><span class="vibrant">Over my summer I worked in the Big Data as a Service team.</span> I designed a dashboard used to view Ansible job templates and inventories with the Ansible Tower API and Vue.js. I also investigated integrating SSO authentication for an internal-use API for the BDaaS team, using API Gateway and the Serverless framework.</p>
 
 			<h4>Intern, <a href="http://www.kas.tw" style="color: #DE1417">Kaohsiung American School</a> (Nov 2016-Feb 2017)</h4>
-			<p><span class="vibrant">I redesigned the digital signage system used around campus.</span> The system I designed is now on all the displays around campus, and allows greater flexibility in what can be displayed. The code for it has been made public and can be found <a href="http://github.com/itemic/status-kas">here</a>.</p>
+			<p><span class="vibrant">I redesigned the digital signage system used around campus.</span> The system I designed is now on all the displays around campus, and allows greater flexibility in what can be displayed. The code for it has been made public and can be found <a class="bg" href="http://github.com/itemic/status-kas">here</a>.</p>
 		</div>
 
 	</body>
