--- a/projects.html
+++ b/projects.html
@@ -11,8 +11,10 @@
 	<div id="container">
 		
 		<div class="main-content bg-bright">
+			<div class="vibrant"><a href="index.html" class="pill-back">◄ HOME</a></div>
 			<h1>Projects</h1><br>
 			<h2>Here's a small selection of some projects I worked on in the past.</h2>
+			<div class="projects-scroll">Scroll up to view</div>
 
 
 		</div>
